--- a/pack/templates/home.html
+++ b/pack/templates/home.html
@@ -3,7 +3,7 @@
     <body class="mt32">
     <div class="container">
         <h3>
-            <input  type="text" placeholder="Search..." class="form-control" id="myInput" onkeyup="myFunction()"/>
+            <input  type="text" placeholder="Search..." class="form-control" id="myInput"/>
         </h3>
         <table id="myTable" class="table table-hover table-striped mt32 customers-list">
             <thead>
@@ -56,27 +56,14 @@
     </div>
 
     <script>
-        function myFunction() {
-            // Declare variables
-            var input, filter, table, tr, td, i, txtValue;
-            input = document.getElementById("myInput");
-            filter = input.value.toUpperCase();
-            table = document.getElementById("myTable");
-            tr = table.getElementsByTagName("tr");
-
-            // Loop through all table rows, and hide those who don't match the search query
-            for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[2];
-                if (td) {
-                    txtValue = td.textContent || td.innerText;
-                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                        tr[i].style.display = "";
-                    } else {
-                        tr[i].style.display = "none";
-                    }
-                }
-            }
-        }
+        $(document).ready(function(){
+            $("#myInput").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#myTable tr").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
+        });
     </script>
     </body>
 {% endblock content %}
