--- a/pack/templates/layout.html
+++ b/pack/templates/layout.html
@@ -252,7 +252,7 @@
 <!-- Calculate Total and Grade -->
 <script lang="javascript" type="text/javascript" src="/static/total_grade_calculator.js"></script>
 <!-- onblur -->
-<!--script lang="javascript" type="text/javascript" src="/static/onblur.js"></script-->
+<script lang="javascript" type="text/javascript" src="/static/various.js"></script>
 <!-- onchange -->
 <script lang="javascript" type="text/javascript" src="/static/onchange.js"></script>
 <script>
