--- a/pack/templates/single_upload.html
+++ b/pack/templates/single_upload.html
@@ -16,12 +16,6 @@
                                     <div class="form-group">
                                         {{ form.unit_code.label(class="bmd-label-floating text-white" ) }}
                                         {{ form.unit_code(class="form-control bg-transparent text-white", type="text", id="ucode", onblur="code_uppercase()") }}
-                                        <script>
-                                            function code_uppercase() {
-                                                var x = document.getElementById("ucode");
-                                                x.value = x.value.toUpperCase();
-                                            }
-                                        </script>
                                     </div>
                                 </div>
                             </div>
@@ -30,12 +24,6 @@
                                     <div class="form-group">
                                         {{ form.unit_name.label(class="bmd-label-floating text-white" ) }}
                                         {{ form.unit_name(class="form-control bg-transparent text-white", type="text", id="uname", onblur="name_uppercase()") }}
-                                        <script>
-                                            function name_uppercase() {
-                                                var x = document.getElementById("uname");
-                                                x.value = x.value.toUpperCase();
-                                            }
-                                        </script>
                                     </div>
                                 </div>
                             </div>
@@ -43,12 +31,9 @@
                                 <div class="col-md-6 mt-3">
                                     <div class="form-group">
                                         {{ form.student_name.label(class="bmd-label-floating text-white") }}
-                                        {{ form.student_name(class="form-control bg-transparent text-white", type="text", id="fname", onblur="myFunction()") }}
-                                        <script>
-                                            function myFunction() {
-                                                var x = document.getElementById("fname");
-                                                x.value = x.value.toUpperCase();
-                                            }
+                                        {{ form.student_name(class="form-control bg-transparent text-white", type="text", id="st_name", onblur="student_name()") }}
+                                        <script type="text/javascript">
+
                                         </script>
                                     </div>
                                 </div>
